# JzDnS

./: .gitignore  .sconsign.dblite  Admin.cpp  Admin.h  BlockingQueueAdmin.hpp  BoostTestHelpers.cmake  CMakeLists.txt  README.md  Riddle.cpp  Riddle.h  RiddleBase.cpp  RiddleBase.h  Sconstruct  TIN_CLIENT.pro  User.cpp  User.h  UserBase.cpp  UserBase.h  adapter.cpp  adapter.h  adminwindow.cpp  adminwindow.h  adminwindow.ui  chooseserver.cpp  chooseserver.h  chooseserver.ui  client.cpp  client.hpp  client1.c  dialog.cpp  dialog.h  dialog.ui  listeningClient.cpp  listeningClient.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+26 more)
Client/: Sconstruct  client.cpp  client.hpp  cryptography.cpp  cryptography.hpp  message.cpp
cmake/Modules/: FindCryptoPP.cmake
komunikaty/: .sconsign.dblite
komunikaty/src/: komunikat.cpp  komunikat.h  message.cpp  message.h
komunikaty/src/test/: test.cpp  testKomunikat.cpp  testKomunikatBool.cpp  testKomunikatInt.cpp  testKomunikatPairIntString.cpp  testKomunikatPairStringString.cpp  testKomunikatString.cpp  testKomunikatVector.cpp
logger/: Logger.h
messages/: Sconstruct
messages/src/: message.cpp  message.h
messages/src/test/: testKomunikat.cpp  testKomunikatBool.cpp  testKomunikatInt.cpp  testKomunikatPairIntString.cpp  testKomunikatPairStringString.cpp  testKomunikatString.cpp  testKomunikatVector.cpp  testMessages.cpp
src/: Admin.cpp  Admin.h  AdminModule.cpp  AdminModule.h  AdminService.cpp  AdminService.h  BlockingQueue.cpp  BlockingQueue.hpp  Logger.cpp  Logger.h  Looper.cpp  Looper.hpp  Problem.h  QueueMap.cpp  QueueMap.hpp  Riddle.cpp  Riddle.h  RiddleBase.cpp  RiddleBase.h  RiddleModule.cpp  RiddleModule.h  RiddleService.cpp  RiddleService.h  ServerModule.cpp  ServerModule.hpp  User.cpp  User.h  UserBase.cpp  UserBase.h  authorization.cpp  authorization.hpp  cryptography.cpp  cryptography.hpp  main.cpp  message.cpp  message.h  serverDispatcher.cpp  serverDispatcher.hpp  serverStructure.cpp  serverStructure.h
src/admin_client/: Admin.cpp  Admin.h  BlockingQueueAdmin.hpp  Problem.cpp  Problem.h  main.cpp  serverStructure.cpp  serverStructure.h
src/client/: client.cpp  client.hpp
src/server/: AdminModule.cpp  AdminModule.h  AdminService.h  Looper.cpp  Looper.hpp  Riddle.cpp  Riddle.h  RiddleBase.cpp  RiddleBase.h  RiddleModule.cpp  RiddleModule.h  ServerModule.cpp  ServerModule.hpp  UserBase.cpp  UserBase.h  authorization.cpp  authorization.hpp  main.cpp
src/test/: test.cpp  testMessage.cpp  testSerializeContent.cpp
test/: RiddleServiceTest.cpp  UserBaseTests.cpp  cryptography_test.cpp  looper_test.cpp  riddleDbTests.cpp  serialization_test.cpp  test.cpp  testMessage.cpp  testSerializeContent.cpp
wireshark_plugin/: udp-jdns-dissector  udp-jdns-dissector.lua
